--- a/ghg-sustainability-app/requirements.txt
+++ b/ghg-sustainability-app/requirements.txt
@@ -1,6 +1,12 @@
 # Core Framework
 streamlit==1.35.0
 
+# FastAPI
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.6
+
 # Database
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
