Fix Streamlit Cloud file watcher limit error
Disable file watching for production deployment to prevent inotify limit error

--- a/ghg-sustainability-app/.streamlit/config.toml
+++ b/ghg-sustainability-app/.streamlit/config.toml
@@ -12,6 +12,8 @@ gatherUsageStats = false
 headless = true
 enableXsrfProtection = true
 maxUploadSize = 10
+fileWatcherType = "none"
+runOnSave = false
 
 [client]
 showErrorDetails = true
